add guest, property and reservation entities

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
+# App
 APP_PORT=3000
-APP_CONTAINER_NAME="booking_backend"
+APP_CONTAINER_NAME=booking_backend
+
+# DB
+DB_CONTAINER_NAME=booking_db
+DB_PORT=5432
+DB_USER=booking_admin
+DB_PASSWORD=test
+DB_NAME=booking_db
