add swagger, rework guest service and repo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/index.ts --watch",
     "build": "tsc"
   },
   "repository": {
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.12.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
@@ -30,6 +32,8 @@
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
   }
 }
